Fix particles HTML element overlapping on Windows

--- a/app/components/Home/Home.scss
+++ b/app/components/Home/Home.scss
@@ -1,5 +1,5 @@
 .particles {
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 6.5rem);
   position: absolute;
   top: 0;
